--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "cucumber": "^0.10.1",
     "eslint": "^2.6.0",
     "nodemon": "^1.9.1"
+  },
+  "dependencies": {
+    "inquirer": "^0.12.0"
   }
 }
